Add instructions for adding the API reference documentation to Sphinx Kerberos documentation project
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24997 dc483132-0cff-0310-8789-dd5450dbe970

--- a/doc/rst_tools/func_document.tmpl
+++ b/doc/rst_tools/func_document.tmpl
@@ -6,7 +6,7 @@
 $title
 #echo ''.join(['=']*len($title)) #
 
-:polyvox:`Doxygen reference to $function.name  <$function.name>`
+:krb5doxy:`Doxygen reference to $function.name  <$function.name>`
 
 ..
 
