--- a/doc/rst_tools/type_document.tmpl
+++ b/doc/rst_tools/type_document.tmpl
@@ -14,7 +14,7 @@ $title
 
 
 
-:polyvox:`Doxygen reference to $composite.name  <$composite.name>`
+:krb5doxy:`Doxygen reference to $composite.name  <$composite.name>`
 
 ..
 .. c:type:: $composite.name
