Added a new section "declaration" to the "types" template.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25013 dc483132-0cff-0310-8789-dd5450dbe970

--- a/doc/rst_tools/type_document.tmpl
+++ b/doc/rst_tools/type_document.tmpl
@@ -20,22 +20,21 @@ $title
 .. c:type:: $composite.name
 ..
 
+Declaration
+------------
+
+$composite.definition
+
 $composite.long_description
+ 
 
-
-#if $composite.Id is not None and $composite.name is not 'krb5_trace_callback'
+#if $composite.Id is not None 
 
 
 #if len($composite.attributes)
 
 Members
 ---------
-
-#else 
-
-#if $composite.type is not None
-typedef :c:type:`$composite.type` $composite.name
-#end if
 
 #end if
 
