Translate @version Doxygen markup into rst format.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25811 dc483132-0cff-0310-8789-dd5450dbe970

--- a/doc/rst_tools/func_document.tmpl
+++ b/doc/rst_tools/func_document.tmpl
@@ -91,3 +91,9 @@ $function.long_description
 #end if
 
 #end if
+
+#if $function.version_num is not None
+.. note::
+	$function.version_num
+#end if
+
