Process param/defname node for "#define".
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@25851 dc483132-0cff-0310-8789-dd5450dbe970

--- a/doc/rst_tools/define_document.tmpl
+++ b/doc/rst_tools/define_document.tmpl
@@ -16,8 +16,12 @@ $composite.short_description
 
 $composite.long_description
 
-#echo ''.join(['=']*len($composite.name)) + '== ======================' #
+#if $composite.name_signature is not None and len($composite.name_signature)
+#echo ''.join(['=']*len($composite.name_signature)) + '== ======================' #
+$composite.name_signature       $composite.initializer
+#echo ''.join(['=']*len($composite.name_signature)) + '== ======================' #
+#else
+#echo ''.join(['=']*len($composite.name)) + '=== ======================' #
 $composite.name       $composite.initializer
-#echo ''.join(['=']*len($composite.name)) + '== ======================' #
-
-
+#echo ''.join(['=']*len($composite.name)) + '=== ======================' #
+#end if
